--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     </header>
     <main class="container mt-5 pt-5 d-flex flex-column align-items-center text-center">
         <form class="row g-3 mt-4 w-100" style="max-width: 500px;">
-            <h2 class="mb-4">Kontakt</h2>
+            <h2 class="mb-1 text-start">Kontakt</h2>
             <div class="col-md-6">
                 <input type="text" class="form-control" id="vorname" placeholder="Vorname" required>
             </div>
