--- a/datenschutz.html
+++ b/datenschutz.html
@@ -15,19 +15,19 @@
     <main class="container mt-5 pt-5 d-flex flex-column align-items-center">
         <div class="text-start" style="max-width: 600px;">
             <h2 class="mb-4">Datenschutzerklärung</h2>
-            <h3>Datenschutz</h3>
+            <h4>Datenschutz</h3>
             <p>
                 Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Ihre Daten werden vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung behandelt.
             </p>
-            <h3>Erhebung und Verarbeitung personenbezogener Daten</h3>
+            <h4>Erhebung und Verarbeitung personenbezogener Daten</h3>
             <p>
                 Die Nutzung unseres Kontaktformulars erfordert die Eingabe von Vorname, Nachname und E-Mail-Adresse. Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.
             </p>
-            <h3>Weitergabe von Daten</h3>
+            <h4>Weitergabe von Daten</h3>
             <p>
                 Ihre Daten werden nicht an Dritte weitergegeben, es sei denn, dies ist gesetzlich vorgeschrieben.
             </p>
-            <h3>Ihre Rechte</h3>
+            <h4>Rechte</h3>
             <p>
                 Sie haben das Recht, jederzeit Auskunft über die von uns gespeicherten Daten zu erhalten, deren Berichtigung oder Löschung zu verlangen.
             </p>
