--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,11 @@
     <title>Alte Feuerwache Laer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="d-flex flex-column">
     <header class="text-white text-center py-3 fixed-top">
-        <h1 class="m-0">Alte Feuerwache Laer</h1>
+        <h1 class="m-0"><a href="index.html" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
     </header>
     <main class="container mt-5 pt-5 d-flex flex-column align-items-center text-center">
         <form class="row g-3 mt-4 w-100" style="max-width: 500px;">
@@ -40,8 +41,14 @@
         </form>
     </main>
     <footer class="text-white text-center py-2 fixed-bottom">
-        <a href="index.html" class="text-white text-decoration-none fw-bold">Zurück zur Startseite</a> |
-        <a href="impressum.html" class="text-white text-decoration-none fw-bold">Impressum</a>
+        <a href="index.html" class="text-white text-decoration-none fw-bold">
+            <span class="d-none d-sm-inline"><i class="fas fa-home me-1"></i>Zurück zur Startseite</span>
+            <i class="fas fa-home d-inline d-sm-none"></i>
+        </a> |
+        <a href="impressum.html" class="text-white text-decoration-none fw-bold">
+            <span class="d-none d-sm-inline"><i class="fas fa-info-circle me-1"></i>Impressum</span>
+            <i class="fas fa-info-circle d-inline d-sm-none"></i>
+        </a>
     </footer>
 </body>
 </html>
