--- a/datenschutz.html
+++ b/datenschutz.html
@@ -6,35 +6,42 @@
     <title>Alte Feuerwache Laer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="d-flex flex-column">
     <header class="text-white text-center py-3 fixed-top d-flex justify-content-between align-items-center">
-        <h1 class="m-0 flex-grow-1">Alte Feuerwache Laer</h1>
-        <a href="contact.html" class="text-white text-decoration-none fw-bold me-3">Kontakt</a>
+        <h1 class="m-0 flex-grow-1"><a href="index.html" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
+        <a href="contact.html" class="text-white text-decoration-none fw-bold me-3">
+            <i class="fas fa-envelope d-inline d-sm-none"></i>
+            <span class="d-none d-sm-inline"><i class="fas fa-envelope me-1"></i>Kontakt</span>
+        </a>
     </header>
     <main class="container mt-5 pt-5 d-flex flex-column align-items-center">
         <div class="text-start" style="max-width: 600px;">
             <h2 class="mb-4">Datenschutzerklärung</h2>
-            <h4>Datenschutz</h3>
+            <h4>Datenschutz</h4>
             <p>
                 Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Ihre Daten werden vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung behandelt.
             </p>
-            <h4>Erhebung und Verarbeitung personenbezogener Daten</h3>
+            <h4>Erhebung und Verarbeitung personenbezogener Daten</h4>
             <p>
                 Die Nutzung unseres Kontaktformulars erfordert die Eingabe von Vorname, Nachname und E-Mail-Adresse. Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.
             </p>
-            <h4>Weitergabe von Daten</h3>
+            <h4>Weitergabe von Daten</h4>
             <p>
                 Ihre Daten werden nicht an Dritte weitergegeben, es sei denn, dies ist gesetzlich vorgeschrieben.
             </p>
-            <h4>Rechte</h3>
+            <h4>Rechte</h4>
             <p>
                 Sie haben das Recht, jederzeit Auskunft über die von uns gespeicherten Daten zu erhalten, deren Berichtigung oder Löschung zu verlangen.
             </p>
         </div>
     </main>
     <footer class="text-white text-center py-2 fixed-bottom">
-        <a href="index.html" class="text-white text-decoration-none fw-bold">Zurück zur Startseite</a>
+        <a href="index.html" class="text-white text-decoration-none fw-bold">
+            <span class="d-none d-sm-inline"><i class="fas fa-home me-1"></i>Zurück zur Startseite</span>
+            <i class="fas fa-home d-inline d-sm-none"></i>
+        </a>
     </footer>
 </body>
 </html>
