--- a/impressum.html
+++ b/impressum.html
@@ -6,11 +6,15 @@
     <title>Alte Feuerwache Laer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="d-flex flex-column">
     <header class="text-white text-center py-3 fixed-top d-flex justify-content-between align-items-center">
-        <h1 class="m-0 flex-grow-1">Alte Feuerwache Laer</h1>
-        <a href="contact.html" class="text-white text-decoration-none fw-bold me-3">Kontakt</a>
+        <h1 class="m-0 flex-grow-1"><a href="index.html" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
+        <a href="contact.html" class="text-white text-decoration-none fw-bold me-3">
+            <i class="fas fa-envelope d-inline d-sm-none"></i>
+            <span class="d-none d-sm-inline"><i class="fas fa-envelope me-1"></i>Kontakt</span>
+        </a>
     </header>
     <main class="container mt-5 pt-5 d-flex flex-column align-items-center">
         <br/><br/>
@@ -27,8 +31,15 @@
         </div>
     </main>
     <footer class="text-white text-center py-2 fixed-bottom">
-        <a href="index.html" class="text-white text-decoration-none fw-bold">Zurück zur Startseite</a> |
-        <a href="contact.html" class="text-white text-decoration-none fw-bold">Kontakt</a>
+        <a href="index.html" class="text-white text-decoration-none fw-bold">
+            <span class="d-none d-sm-inline"><i class="fas fa-home me-1"></i>Zurück zur Startseite</span>
+            <i class="fas fa-home d-inline d-sm-none"></i>
+        </a>
+        <span class="d-none d-sm-inline"> | </span>
+        <a href="contact.html" class="text-white text-decoration-none fw-bold">
+            <span class="d-none d-sm-inline"><i class="fas fa-envelope me-1"></i>Kontakt</span>
+            <i class="fas fa-envelope d-inline d-sm-none"></i>
+        </a>
     </footer>
 </body>
 </html>
