Improving the styling

--- a/impressum.html
+++ b/impressum.html
@@ -9,16 +9,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="d-flex flex-column">
-    <header class="text-white text-center py-3 fixed-top d-flex justify-content-between align-items-center">
-        <h1 class="m-0 flex-grow-1"><a href="index.html" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
-        <a href="contact.html" class="text-white text-decoration-none fw-bold me-3">
-            <i class="fas fa-envelope d-inline d-sm-none"></i>
-            <span class="d-none d-sm-inline"><i class="fas fa-envelope me-1"></i>Kontakt</span>
-        </a>
+    <header class="text-white py-3 fixed-top w-100">
+        <div class="container-fluid px-4 position-relative">
+            <div class="row align-items-center">
+                <div class="col text-center">
+                    <h1 class="m-0"><a href="index.html" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
+                </div>
+                <div class="col-auto position-absolute end-0 pe-4">
+                    <a href="contact.html" class="text-white text-decoration-none fw-bold">
+                        <i class="fas fa-envelope d-inline d-sm-none"></i>
+                        <span class="d-none d-sm-inline"><i class="fas fa-envelope me-1"></i>Kontakt</span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </header>
-    <main class="container mt-5 pt-5 d-flex flex-column align-items-center">
-        <br/><br/>
-        <div class="text-start" style="max-width: 600px;">
+    <main class="container mt-5 pt-5 pb-5 mb-5 d-flex flex-column align-items-center">
+        <div style="max-width: 600px;">
             <h2 class="mb-4">Impressum</h2>
             <p>
                 Andreas Feldmann<br>
@@ -26,20 +33,22 @@
                 45145 Essen<br>
             </p>
             <p>
-                <a href="mailto:hallo@alte-feuerwache-laer.de" class="custom-link">hallo@alte-feuerwache-laer.de</a><br>
+                <a href="mailto:hallo@alte-feuerwache-laer.de" class="custom-link">hallo@alte-feuerwache-laer.de</a>
             </p>
         </div>
     </main>
-    <footer class="text-white text-center py-2 fixed-bottom">
-        <a href="index.html" class="text-white text-decoration-none fw-bold">
-            <span class="d-none d-sm-inline"><i class="fas fa-home me-1"></i>Zurück zur Startseite</span>
-            <i class="fas fa-home d-inline d-sm-none"></i>
-        </a>
-        <span class="d-none d-sm-inline"> | </span>
-        <a href="contact.html" class="text-white text-decoration-none fw-bold">
-            <span class="d-none d-sm-inline"><i class="fas fa-envelope me-1"></i>Kontakt</span>
-            <i class="fas fa-envelope d-inline d-sm-none"></i>
-        </a>
+    <footer class="footer text-white text-center py-3 fixed-bottom">
+        <div class="container">
+            <a href="index.html" class="text-white text-decoration-none fw-bold">
+                <span class="d-none d-sm-inline"><i class="fas fa-home me-1"></i>Startseite</span>
+                <i class="fas fa-home d-inline d-sm-none"></i>
+            </a>
+            <span class="mx-2">|</span>
+            <a href="impressum.html" class="text-white text-decoration-none fw-bold">
+                <span class="d-none d-sm-inline"><i class="fas fa-info-circle me-1"></i>Impressum</span>
+                <i class="fas fa-info-circle d-inline d-sm-none"></i>
+            </a>
+        </div>
     </footer>
 </body>
 </html>
