--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +7,67 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        .content-wrapper {
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        .content {
+            flex: 1 0 auto;
+            padding-top: 60px; /* Height of header */
+            padding-bottom: 60px; /* Height of footer */
+        }
+        .footer {
+            flex-shrink: 0;
+        }
+    </style>
 </head>
-<body class="d-flex flex-column">
-    <header class="text-white text-center py-3 fixed-top d-flex justify-content-between align-items-center">
-        <h1 class="m-0 flex-grow-1"><a href="index.html" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
-        <a href="contact.html" class="text-white text-decoration-none fw-bold me-3">
-            <i class="fas fa-envelope d-inline d-sm-none"></i>
-            <span class="d-none d-sm-inline"><i class="fas fa-envelope me-1"></i>Kontakt</span>
-        </a>
+<body class="d-flex flex-column h-100">
+    <header class="text-white py-3 fixed-top w-100">
+        <div class="container-fluid px-4 position-relative">
+            <div class="row align-items-center">
+                <div class="col text-center">
+                    <h1 class="m-0"><a href="index.html" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
+                </div>
+                <div class="col-auto position-absolute end-0 pe-4">
+                    <a href="contact.html" class="text-white text-decoration-none fw-bold">
+                        <i class="fas fa-envelope d-inline d-sm-none"></i>
+                        <span class="d-none d-sm-inline"><i class="fas fa-envelope me-1"></i>Kontakt</span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </header>
-    <main class="d-flex flex-grow-1 justify-content-center align-items-center text-center">
-        <div class="d-flex flex-column align-items-center">
-            <img src="logo.png" alt="Logo" class="img-fluid">
-            <p class="mt-3">Dieses Wohnprojekt befindet sich noch im Aufbau</p>
+
+    <main class="content">
+        <div class="container h-100 d-flex justify-content-center align-items-center">
+            <div class="text-center">
+                <img src="logo.png" alt="Logo" class="img-fluid" style="max-width: 300px;">
+                <p class="mt-3">Dieses Wohnprojekt befindet sich noch im Aufbau</p>
+            </div>
         </div>
     </main>
-    <footer class="text-white text-center py-2 fixed-bottom">
-        <a href="impressum.html" class="text-white text-decoration-none fw-bold">
-            <i class="fas fa-info-circle d-inline d-sm-none"></i>
-            <span class="d-none d-sm-inline"><i class="fas fa-info-circle me-1"></i>Impressum</span>
-        </a>
+
+    <footer class="footer text-white text-center py-3 fixed-bottom">
+        <div class="container">
+            <a href="index.html" class="text-white text-decoration-none fw-bold">
+                <span class="d-none d-sm-inline"><i class="fas fa-home me-1"></i>Startseite</span>
+                <i class="fas fa-home d-inline d-sm-none"></i>
+            </a>
+            <span class="mx-2">|</span>
+            <a href="impressum.html" class="text-white text-decoration-none fw-bold">
+                <span class="d-none d-sm-inline"><i class="fas fa-info-circle me-1"></i>Impressum</span>
+                <i class="fas fa-info-circle d-inline d-sm-none"></i>
+            </a>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
