--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de" class="h-100" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alte Feuerwache Laer</title>
+    <meta name="description" content="Alte Feuerwache in Laer - Ein Wohnprojekt im Aufbau">
+    <meta name="keywords" content="Wohnprojekt, Laer, Bochum, Alte Feuerwache, Wohnen, Gemeinschaft, Ruhrgebiet, Ruhrpott">
+    <meta name="author" content="Alte Feuerwache Laer">
+    <meta name="robots" content="index, follow">
+    <meta name="geo.region" content="DE-NRW">
+    <meta name="geo.placename" content="Bochum">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://alte-feuerwache-laer.de/contact.html">
+    <meta property="og:title" content="Alte Feuerwache Laer - Kontakt">
+    <meta property="og:description" content="Ein Wohnprojekt im Aufbau">
+    <meta property="og:image" content="https://alte-feuerwache-laer.de/logo.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://alte-feuerwache-laer.de/contact.html">
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <title>Alte Feuerwache Laer - Kontakt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -13,7 +33,7 @@
         <div class="container-fluid px-4 position-relative">
             <div class="row align-items-center">
                 <div class="col text-center">
-                    <h1 class="m-0"><a href="index.html" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
+                    <h1 class="m-0"><a href="/" class="text-white text-decoration-none">Alte Feuerwache Laer</a></h1>
                 </div>
                 <div class="col-auto position-absolute end-0 pe-4">
                     <a href="contact.html" class="text-white text-decoration-none fw-bold">
@@ -54,7 +74,7 @@
         </form>
     </main>
     <footer class="text-white text-center py-3 fixed-bottom">
-        <a href="index.html" class="text-white text-decoration-none fw-bold">
+        <a href="/" class="text-white text-decoration-none fw-bold">
             <span class="d-none d-sm-inline"><i class="fas fa-home me-1"></i>Startseite</span>
             <i class="fas fa-home d-inline d-sm-none"></i>
         </a>
