Change of address

--- a/impressum.html
+++ b/impressum.html
@@ -48,7 +48,7 @@
         <div style="max-width: 600px;">
             <h2 class="mb-4">Impressum</h2>
             <p>
-                Andreas Feldmann<br>
+                Alte Feuerwache Laer GbR<br>
                 Sybelstraße 45<br>
                 45145 Essen<br>
             </p>
