Using "Du" and not "Sie"

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -49,19 +49,19 @@
             <h2 class="mb-4">Datenschutzerklärung</h2>
             <h4>Datenschutz</h4>
             <p>
-                Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Ihre Daten werden vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung behandelt.
+                Wir nehmen den Schutz deiner persönlichen Daten sehr ernst. Deine Daten werden vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung behandelt.
             </p>
             <h4>Erhebung und Verarbeitung personenbezogener Daten</h4>
             <p>
-                Die Nutzung unseres Kontaktformulars erfordert die Eingabe von Vorname, Nachname und E-Mail-Adresse. Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.
+                Die Nutzung unseres Kontaktformulars erfordert die Eingabe von Vorname, Nachname und E-Mail-Adresse. Diese Daten werden ausschließlich zur Bearbeitung deiner Anfrage verwendet.
             </p>
             <h4>Weitergabe von Daten</h4>
             <p>
-                Ihre Daten werden nicht an Dritte weitergegeben, es sei denn, dies ist gesetzlich vorgeschrieben.
+                Deine Daten werden nicht an Dritte weitergegeben, es sei denn, dies ist gesetzlich vorgeschrieben.
             </p>
             <h4>Rechte</h4>
             <p>
-                Sie haben das Recht, jederzeit Auskunft über die von uns gespeicherten Daten zu erhalten, deren Berichtigung oder Löschung zu verlangen.
+                Du hast das Recht, jederzeit Auskunft über die von uns gespeicherten Daten zu erhalten, deren Berichtigung oder Löschung zu verlangen.
             </p>
         </div>
     </main>
