--- a/index.html
+++ b/index.html
@@ -27,26 +27,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        .content-wrapper {
-            min-height: 100%;
-            display: flex;
-            flex-direction: column;
-        }
-        .content {
-            flex: 1 0 auto;
-            padding-top: 60px; /* Height of header */
-            padding-bottom: 60px; /* Height of footer */
-        }
-        .footer {
-            flex-shrink: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="https://unpkg.com/img-comparison-slider@7/dist/style.css" />
 </head>
 <body class="d-flex flex-column h-100">
     <!-- Schema.org markup for Google -->
@@ -87,11 +68,24 @@
         </div>
     </header>
 
-    <main class="content">
-        <div class="container h-100 d-flex justify-content-center align-items-center">
-            <div class="text-center">
-                <img src="logo.png" alt="Logo" class="img-fluid" style="max-width: 300px;">
-                <p class="mt-3">Dieses Wohnprojekt befindet sich noch im Aufbau</p>
+    <main class="content d-flex align-items-center">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-4 mb-lg-0">
+                    <img-comparison-slider class="w-100">
+                      <img slot="first" src="images/Alte-Feuerwache.jpg" alt="Alte Feuerwache" style="width: 100%; height: 70vh; object-fit: cover;"/>
+                      <img slot="second" src="images/Neue-Feuerwache.jpg" alt="Visualisierung der neuen Feuerwache" style="width: 100%; height: 70vh; object-fit: cover;"/>
+                    </img-comparison-slider>
+                </div>
+                <div class="col-lg-6 mb-4 mb-lg-0">
+                    <h2 class="text-start">Aus alt mach neu</h2>
+                    <p class="text-start">Wir sind eine Gruppe von sechs Erwachsenen und einem Hund, die ein gemeinschaftliches Wohnprojekt in Bochum ins Leben gerufen haben. Seit Anfang 2025 arbeiten wir intensiv an der Planung und konkretisieren unsere Vision in regelmäßigen Treffen.</p>
+                    <p class="text-start">Wir suchen Menschen, die mit uns gemeinsam das Wohnen und Leben gestalten möchten. Unser Projekt basiert auf vier zentralen Werten:</p>
+                    <p class="text-start"><strong>Umweltbewusstsein:</strong> Wir legen großen Wert auf einen nachhaltigen Umgang mit unserer Umwelt und eine ökologische Gestaltung unseres Wohnraums.</p>
+                    <p class="text-start"><strong>Offenheit:</strong> Wir schätzen unterschiedliche Perspektiven und Lebensentwürfe innerhalb und außerhalb unserer Gemeinschaft.</p>
+                    <p class="text-start"><strong>Wertschätzung:</strong> Ein respektvolles, gleichberechtigtes und akzeptierendes Miteinander ist uns besonders wichtig.</p>
+                    <p class="text-start"><strong>Gemeinschaft:</strong> Wir möchten ein solidarisches Zusammenleben aufbauen und gemeinsam wachsen.</p>
+                </div>
             </div>
         </div>
     </main>
@@ -111,5 +105,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/img-comparison-slider@7/dist/index.js"></script>
 </body>
 </html>
