--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@
                       <img slot="first" src="images/Alte-Feuerwache.jpg" alt="Alte Feuerwache" style="width: 100%; height: 70vh; object-fit: cover;"/>
                       <img slot="second" src="images/Neue-Feuerwache.jpg" alt="Visualisierung der neuen Feuerwache" style="width: 100%; height: 70vh; object-fit: cover;"/>
                     </img-comparison-slider>
+                    <div class="text-center mt-2">Dieses Bild ist KI-generiert und dient zum Träumen</div>
                 </div>
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <h2 class="text-start">Aus alt mach neu</h2>
                     <p class="text-start">Wir sind eine Gruppe von sechs Erwachsenen und einem Hund, die ein gemeinschaftliches Wohnprojekt in Bochum ins Leben gerufen haben. Seit Anfang 2025 arbeiten wir intensiv an der Planung und konkretisieren unsere Vision in regelmäßigen Treffen.</p>
                     <p class="text-start">Wir suchen Menschen, die mit uns gemeinsam das Wohnen und Leben gestalten möchten. Unser Projekt basiert auf vier zentralen Werten:</p>
-                    <p class="text-start"><strong>Umweltbewusstsein:</strong> Wir legen großen Wert auf einen nachhaltigen Umgang mit unserer Umwelt und eine ökologische Gestaltung unseres Wohnraums.</p>
-                    <p class="text-start"><strong>Offenheit:</strong> Wir schätzen unterschiedliche Perspektiven und Lebensentwürfe innerhalb und außerhalb unserer Gemeinschaft.</p>
-                    <p class="text-start"><strong>Wertschätzung:</strong> Ein respektvolles, gleichberechtigtes und akzeptierendes Miteinander ist uns besonders wichtig.</p>
-                    <p class="text-start"><strong>Gemeinschaft:</strong> Wir möchten ein solidarisches Zusammenleben aufbauen und gemeinsam wachsen.</p>
+                    <p class="text-start"><strong><i class="fa-solid fa-seedling"></i> Umweltbewusstsein:</strong> Wir legen großen Wert auf einen nachhaltigen Umgang mit unserer Umwelt und eine ökologische Gestaltung unseres Wohnraums.</p>
+                    <p class="text-start"><strong><i class="far fa-comments"></i> Offenheit:</strong> Wir schätzen unterschiedliche Perspektiven und Lebensentwürfe innerhalb und außerhalb unserer Gemeinschaft.</p>
+                    <p class="text-start"><strong><i style="color: #B93D27" class="fas fa-gem"></i> Wertschätzung:</strong> Ein respektvolles, gleichberechtigtes und akzeptierendes Miteinander ist uns besonders wichtig.</p>
+                    <p class="text-start"><strong><i class="fas fa-hands-helping"></i> Gemeinschaft:</strong> Wir möchten ein solidarisches Zusammenleben aufbauen und gemeinsam wachsen.</p>
                 </div>
             </div>
         </div>
