--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p class="text-start"><strong><i class="fa-solid fa-seedling"></i> Umweltbewusstsein:</strong> Wir legen großen Wert auf einen nachhaltigen Umgang mit unserer Umwelt und eine ökologische Gestaltung unseres Wohnraums.</p>
                     <p class="text-start"><strong><i class="far fa-comments"></i> Offenheit:</strong> Wir schätzen unterschiedliche Perspektiven und Lebensentwürfe innerhalb und außerhalb unserer Gemeinschaft.</p>
                     <p class="text-start"><strong><i style="color: #B93D27" class="fas fa-gem"></i> Wertschätzung:</strong> Ein respektvolles, gleichberechtigtes und akzeptierendes Miteinander ist uns besonders wichtig.</p>
-                    <p class="text-start"><strong><i class="fas fa-hands-helping"></i> Gemeinschaft:</strong> Wir möchten ein solidarisches Zusammenleben aufbauen und gemeinsam wachsen.</p>
+                    <p class="text-start"><strong><i class="fas fa-hands-helping"></i> Gemeinschaft:</strong> Wir möchten ein solidarisches Zusammenleben in Form einer Genossenschaft aufbauen und gemeinsam wachsen.</p>
                 </div>
             </div>
         </div>
